@@ -189,12 +189,12 @@ local BossSpider_RconAmmoTypes = {
 ---@field southSpiderDistancePercentage uint
 
 local Settings = {
-    bossSpiderStartingLeftDistance = 5000, -- How far left of spawn the center of the spiders area starts the game at.
-    spiderDamageToRetreat = 10000,
+    bossSpiderStartingLeftDistance = 1500, -- How far left of spawn the center of the spiders area starts the game at.
+    spiderDamageToRetreat = 5000,
     spiderDamageSecondsConsidered = 600, -- How many seconds in the past the spider will consider to see if it has sustained enough damage to retreat. Set to 10 minutes to try and counter players doing slow damage to the spider to try and avoid it retreating.
-    spiderDistanceToRetreat = 1000, -- How far to increment a spider's distance to the left by when it is forced to retreat.
-    spidersRoamingXRange = 500, -- How far left and right from the centre of a teams lane the spider will roam.
-    spidersFightingXRange = 2000, -- Random limit to stop it chasing infinitely.
+    spiderDistanceToRetreat = 500, -- How far to increment a spider's distance to the left by when it is forced to retreat.
+    spidersRoamingXRange = 250, -- How far left and right from the centre of a teams lane the spider will roam.
+    spidersFightingXRange = 1000, -- Random limit to stop it chasing infinitely.
     spidersFightingStepDistance = 5, -- How far the spider will move away from its current location when fighting per second. - value of 2 or lower known to cause weird failed leg movement actions.
     distanceToCheckForEnemiesNearby = 60, -- How far around it the spider will look for enemies nearby before considering other actions when fighting. This is a bit above how far the spider can move in a second plus its max weapons range, to try and avoid it stepping forwards and then next second stepping backwards.
     distanceSpiderMovesinSecond = 21, -- Approximate distance a full speed boss spider will cover over 1 second. This is based o the spiders current speed and not for adhoc changing.
