@@ -1,3 +1,7 @@
+Bugs:
+    Damage from the north team affects south team's biters. Given we are already intercepting it affecting between the player teams, we may as well block it damaging biters on the other team as well. They aren't auto targetted, but when using nukes or manaully targettign arty at all red dots its very obvious.
+
+
 Spiders atomic bombs:
 	Change to be a small blast area of 5 tiles radius. With the impact damage being very high to kill whatever it hits still, but the blast area being a simple area damages of enough to kill turrets. I'd expect a player in a spider to loose the spider, but not to die themselves if possible. So I think the damages want to be ordered from outer to inner. So that the direct hit happens last, meaning any ejected player from the direct hit doesn't then taken additional damage from the radius ones.
 
